2017-08-01

        * Version 1.5.0 released
        =========================


2017-07-28

        * Version 1.4.0 released
        =========================

        Add GCTAEventBin::ipix() and ieng() setter methods (#2171)
        Write response information into simulated observation definition file (#2170)
        Normalise phase curves by default (#2154, #2172)
        Support Python list slicing for container classes (#2128)
        Add Python typemaps for GObservation::likelihood() output argument (#2126)
        Add GSkyRegions::overlaps() and GSkyMap::overlaps() classes (#1980)


2017-07-06

        * Bug fix version 1.3.1 released
        ================================

        Add margin to maximum light and phase curve values (#2149)
        Improve caching in GSkyDir (#2148)
        Make GCTAPsfKing save against invalid values (#2133)


2017-06-06

        * Version 1.3.0 released
        =========================

        Add header card keyword map to GFitsHeader for fast access (#2120)
        Correct set names of spatial GLON/GLAT model parameters (#2113)
        Increase maximum CTA King PSF radius to 2 degrees (#2112)
        Support "BKG" as name of CTA background template
        Scale optimizer convergence criterion with step size (#2022)
        Put response cube loading and saving in OpenMP critical zone (#2021)
        Add GPhases class (#1996)
        Allow fitting of scale parameter in composite models (#1992)
        Add GEventList::append_column() method (#1991)
        Add scalar addition and subtraction operators to matrix classes (#1990)
        Add GCTAAeff::ebounds() method (#1989)
        Add GEbounds::emin() and GEbounds::emax() setter methods (#1989)
        Protect GEbounds::set_lin() and set_log() methods from invalid arguments (#1989)
        Avoid hang-up of GCTAModelAeffBackground::mc() method (#1988)
        Copy shared Python libraries instead of creating a symbolic link (#1987)